# cmdb

./: .gitignore  ABOUT  AUTHORS  BUGS  ChangeLog  INSTALL  Jenkinsfile  Makefile  Makefile.OLD  Makefile.am  NEWS  README  TODO  buildspec.yml  config.h-SETUP  configure.ac  dnsa.h  wrcf.c  write_zone.h  wzf.c
.github/workflows/: cmdb.yml
ansible/: ansible.cfg  cmdb.yml  hosts  requirements.yml
ansible/group_vars/: cmdb
ci/: autoConfBuildSteps.groovy
conf/: Makefile.am  centos-packages.sql  cmdb.conf  cmdb.conf.DIST  config-and-build_type.sql  database-inserts.sql  database-tables-with-server_id.txt  database-update.sql  debian-packages.sql  dnsa-config-insert.sql  dnsa-updates.sql  dnsa.conf  kickstart.cfg  mkvm.conf.DIST  ubuntu-packages.sql
daemon/: Makefile.OLD  Makefile.am  ailsa.c  client_info.c  client_info.h  cmdbc.c  cmdbd.c  cmdbd.h  conversion.c  conversion.h  fileio.c  fileio.h
docker/: build.sh
docker/cmdb/: Dockerfile
docs/: build-system.txt  config-names.txt  config-values.txt  license-head.txt
include/: ailsacmdb.h  ailsaregex.h  ailsasql.h  build.h  cbc_base_sql.h  cbc_common.h  cbc_data.h  cbc_dnsa.h  cbcdomain.h  cbcnet.h  cmdb.h  cmdb_cbc.h  cmdb_cmdb.h  cmdb_data.h  cmdb_dnsa.h  cmdb_sql.h  cmdbd.h  config.h-SETUP  configmake.h-SETUP  dnsa_base_sql.h  dnsa_data.h  virtual.h
lib/: .gitignore  Makefile.OLD  Makefile.am  ailsacmdb.c  ailsasql.c  b64.c  cbc_base_sql.c  cbc_data.c  cbcnet.c  cmdb_base_sql.c  cmdb_data.c  config.c  data.c  dnsa_base_sql.c  dnsa_data.c  dnsa_ip.c  dnsa_net.c  errors.c  fileio.c  hash.c  helper.c  list.c  logging.c  networking.c  parse_config.c  queries.c  regexp.c  sql.c  sql_data.c  uuid.c
m4/: .gitignore  ax_check_openssl.m4  ax_lib_gcrypt.m4  ax_lib_mysql.m4  ax_lib_odbc.m4  ax_lib_sqlite3.m4  ax_lib_uuid.m4  ax_lib_yaml.m4  ax_path_lib_pcre.m4  check_cbc.m4  check_dnsa.m4  database_checks.m4  gnulib-cache.m4  gnulib-comp.m4  libxml2.m4  user_checks.m4
man/: Makefile.am  cbc.8  cbcdomain.8  cbclocale.8  cbcos.8  cbcpack.8  cbcpart.8  cbcscript.8  cbcsysp.8  cbcvarient.8  ckc.8  cmdb-identity.8  cmdb.8  cpc.8  dnsa.7  dnsa.8  mknet.8  mksp.8  mkvm.8
misc/: cmdb.service
old/: Makefile.nopcre  ailsasql.c  base_sql.c  base_sql.h  build.h  build_data_struct.c  build_display.c  build_info.c  cbc_base_sql.c  cbc_base_sql.h  cbc_bdom_sql.c  cbc_bdom_sql.h  cbc_common.c  cbc_common.h  cbc_data.c  cbc_data.h  cbc_dnsa.c  cbc_mysql.c  cbc_mysql.h  cbcnet.c  cbcscript.h  checks.h  ckc.c  cmdb_data.c  cmdb_mysql.c  cmdb_sqlite.h  cpc.c  dnsa_base_sql.c  dnsa_net.h  dnsacom.c  drzf.c  dynamo.c  forward.h  fwd_zone.c  last_cmdbcom.c  parse_config.c  rev_zone.c  sql_test.c
old/daemon/: ailsa.c  client_info.c  client_info.h  cmdbc.c  conversion.h
old/lib/: networking.c  sql.c
scripts/: Makefile.am  base.sh  bb-mysql.pl  cmdb.sh  create_group_ldif.sh  create_ldif_containers.sh  create_ldif_for_domain.sh  create_user_ldif.sh  deploy-lspci.sh  deploy-mysql.sh  deploy-patch.sh  disable_install.php  elastic-repo.sh  firstboot.sh  hobbit-patch.sh  kick-auth.sh  kick-final.sh  kick-ldap-sudo.sh  kick-nagios.sh  kick-ntp.sh  kick-postfix.sh  ldap-auth.sh  log.sh  lspci.sh  motd.sh  nagios.sh  ntp.sh  puppet.sh  sssd-auth.sh  xymon-client.sh  xymon-setup.sh
scripts/hosts/: README
scripts/tmp/: README
scripts/web/: README
sql/: Makefile.am  all-tables-mysql-0.2.18.9.3.sql  all-tables-sqlite-0.2.18.7.sql  all-tables-sqlite-0.2.18.9.1.sql  all-tables-sqlite-0.2.18.9.3.sql  arch.sql  boot_line.sql  build-type.sql  build.sql  build_domain.sql  build_files.sql  build_type.sql  build_vars.sql  cmdb.sql  disk_dev.sql  hardware.sql  initial.sql  linux.sql  options.sql  records.sql  rev_records.sql  rev_zones.sql  seed_part.sql  solaris.sql  trigger-mysql-update-0.2.18.8.2.sql  trigger-sqlite-update-0.2.18.7.1.sql  trigger-sqlite-update-0.2.18.8.2.sql  trigger-sqlite-update-0.2.18.8.3.sql  unknown.sql  update-0.2.16.11.6.sql  update-0.2.16.12.sql  update-0.2.18.7.1-mysql  update-0.2.18.8.2  update-0.2.18.8.2-mysql  update-0.2.18.8.3  update-0.2.18.8.3-mysql  zones.sql
sql/mysql/: all-tables-mysql.sql  build.sql  build_domain.sql  build_ip.sql  build_os.sql  build_type.sql  configuration.sql  contacts.sql  customer.sql  default_customer.sql  default_domain.sql  default_locale.sql  default_os.sql  default_part.sql  default_scheme.sql  default_varient.sql  disk_dev.sql  glue_zones.sql  hard_type.sql  hardware.sql  identity.sql  locale.sql  nohost.sql  options.sql  packages.sql  part_options.sql  prefered_a.sql  preferred_a.sql  records.sql  rev_records.sql  rev_zones.sql  seed_schemes.sql  server.sql  server_type.sql  service_type.sql  services.sql  system_package_args.sql  system_package_conf.sql  system_packages.sql  system_scripts.sql  (+8 more)
sql/old/: trigger-mysql-update-0.2.18.7.1.sql  trigger-mysql-update-0.2.18.8.3.sql  update-0.2.16.12.sql  update-0.2.18.7.1
sql/postgresql/: all-tables.sql
sql/sqlite/: all-tables-sqlite.sql  arch.sql  build.sql  build_domain.sql  build_ip.sql  build_os.sql  build_type.sql  contacts.sql  customer.sql  default_customer.sql  default_domain.sql  default_locale.sql  default_os.sql  default_part.sql  default_scheme.sql  default_varient.sql  disk_dev.sql  glue_zones.sql  hard_type.sql  hardware.sql  identity.sql  locale.sql  packages.sql  part_options.sql  prefered_a.sql  preferred_a.sql  records.sql  rev_records.sql  rev_zones.sql  seed_schemes.sql  server.sql  server_type.sql  services.sql  system_package_args.sql  system_package_conf.sql  system_packages.sql  system_scripts.sql  (+5 more)
src/: Makefile  Makefile.OLD  Makefile.am  Makefile.nopcre  base_mysql.c  base_sql.c  base_sql.h  build.c  build.h  build_add.c  build_data_struct.c  build_display.c  build_info.c  builddomain.c  builddomain.h  cbc.c  cbc_base_sql.c  cbc_base_sql.h  cbc_bdom_sql.c  cbc_bdom_sql.h  cbc_common.c  cbc_common.h  cbc_data.c  cbc_data.h  cbc_dnsa.c  cbc_dnsa.h  cbc_mysql.c  cbc_mysql.h  cbccom.c  cbcdomain.c  cbcdomain.h  cbclocale.c  cbcnet.c  cbcnet.h  cbcos.c  cbcos.h  cbcpack.c  cbcpack.h  cbcpart.c  cbcpart.h  (+78 more)
(+32 files in other folders)
